<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/main_padding"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/shoes_logo"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="25sp"
                android:text="@string/app_name"
                android:gravity="center"/>

            <TextView
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_marginTop="@dimen/spacing_24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                style="@style/GreenButton" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_marginTop="@dimen/spacing_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/GreenButtonBorder"
                android:text="@string/register"/>

        </LinearLayout>

    </ScrollView>

</layout>